Fix a few v4 coloring issues
Removed added colors in colors.xml because they are provided already by the core presentation module. Also they were causing problems by overriding colors from core.

--- a/app/src/main/res/drawable/bg_drawer_header.xml
+++ b/app/src/main/res/drawable/bg_drawer_header.xml
@@ -24,7 +24,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="8dp"/>
             <!-- TODO color reference -->
-            <solid android:color="@color/abbey" />
+            <solid android:color="@color/tuna" />
         </shape>
     </item>
 </ripple>
