--- a/app/src/main/res/drawable/bg_drawer_header_initials.xml
+++ b/app/src/main/res/drawable/bg_drawer_header_initials.xml
@@ -20,6 +20,6 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="2dp"/>
-    <solid android:color="@color/brand" />
+    <solid android:color="?attr/brand_norm" />
 </shape>
 
