--- a/app/src/main/res/layout/fragment_message_action_sheet.xml
+++ b/app/src/main/res/layout/fragment_message_action_sheet.xml
@@ -152,7 +152,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/move_to_spam"
-                app:drawableStartCompat="@drawable/ic_spam" />
+                app:drawableStartCompat="@drawable/ic_fire" />
 
             <TextView
                 android:id="@+id/text_view_details_actions_move_to"
