--- a/app/src/main/res/drawable/ic_envelope_all_emails.xml
+++ b/app/src/main/res/drawable/ic_envelope_all_emails.xml
@@ -24,12 +24,12 @@
     android:viewportHeight="24">
   <path
       android:pathData="M16.5,3H7.5V4.5H16.5V3Z"
-      android:fillColor="#ffffff"/>
+      android:fillColor="@color/icon_norm"/>
   <path
       android:pathData="M4.5,6H19.5V7.5H4.5V6Z"
-      android:fillColor="#ffffff"/>
+      android:fillColor="@color/icon_norm"/>
   <path
       android:pathData="M3,9V22.5H21V9H3ZM4.5,21V12.45L12,17.505L19.5,12.45V21H4.5ZM12,15.705L19.5,10.635V10.5H4.5V10.635L12,15.705Z"
-      android:fillColor="#ffffff"
+      android:fillColor="@color/icon_norm"
       android:fillType="evenOdd"/>
 </vector>
