--- a/app/src/main/res/drawable/ic_sign_out.xml
+++ b/app/src/main/res/drawable/ic_sign_out.xml
@@ -24,8 +24,8 @@
     android:viewportHeight="24">
   <path
       android:pathData="M22.5,22.5H9V18H10.5V21H21V3H10.5V6H9V1.5H22.5V22.5Z"
-      android:fillColor="#ffffff"/>
+      android:fillColor="@color/icon_norm"/>
   <path
       android:pathData="M7.2803,15.9697L4.0606,12.7501H15V11.2501H4.0606L7.2803,8.0304L6.2197,6.9697L1.1893,12.0001L6.2197,17.0304L7.2803,15.9697Z"
-      android:fillColor="#ffffff"/>
+      android:fillColor="@color/icon_norm"/>
 </vector>
