--- a/app/src/main/res/layout/layout_drawer_header.xml
+++ b/app/src/main/res/layout/layout_drawer_header.xml
@@ -83,7 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/padding_l"
         android:src="@drawable/ic_chevron_down"
-        app:tint="@color/text_inverted"
+        app:tint="@color/icon_inverted"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
