--- a/app/src/main/res/layout/layout_message_details_activity_toolbar.xml
+++ b/app/src/main/res/layout/layout_message_details_activity_toolbar.xml
@@ -35,7 +35,7 @@
         android:paddingEnd="@dimen/toolbar_padding_end"
         app:contentInsetStartWithNavigation="0dp"
         app:layout_collapseMode="pin"
-        app:navigationIcon="@drawable/ic_arrow_back">
+        app:navigationIcon="@drawable/ic_arrow_left">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
