Disable action mode when action sheet is disabled on MailboxActivity.
MAILAND-1760

--- a/app/src/main/res/layout/fragment_message_action_sheet.xml
+++ b/app/src/main/res/layout/fragment_message_action_sheet.xml
@@ -199,6 +199,10 @@
                 app:drawableStartCompat="@drawable/ic_phishing"
                 app:drawableTint="@color/notification_error" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/padding_xxxxl"/>
+
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </LinearLayout>
