--- a/app/src/main/res/layout/navigation_drawer.xml
+++ b/app/src/main/res/layout/navigation_drawer.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
   ~ This file is part of ProtonMail.
@@ -18,25 +17,27 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="@dimen/navdrawer_width"
     android:layout_height="match_parent"
-    android:layout_gravity="start">
+    android:layout_gravity="start"
+    android:background="@color/nav_view_background"
+    android:orientation="vertical">
+
+    <me.proton.core.accountmanager.presentation.view.AccountPrimaryView
+        android:id="@+id/accountPrimaryView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/gap_medium"
+        tools:email="superuser@protonmail.com"
+        tools:initials="SU"
+        tools:isExpandable="true"
+        tools:name="Super User" />
 
     <ch.protonmail.android.ui.view.ProtonSideDrawer
         android:id="@+id/sideDrawer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/left_drawer_users"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:background="@color/white"
-        android:visibility="gone"/>
-
-</FrameLayout>
+</LinearLayout>
