--- a/app/src/main/res/layout/layout_message_details_header.xml
+++ b/app/src/main/res/layout/layout_message_details_header.xml
@@ -24,6 +24,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:animateLayoutChanges="true"
     android:paddingHorizontal="@dimen/message_details_header_padding_horizontal"
     android:paddingVertical="@dimen/message_details_header_padding_vertical">
 
@@ -208,13 +209,12 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="@id/senderInitialView"
         app:layout_constraintRight_toRightOf="@id/senderInitialView"
-        app:layout_constraintTop_toTopOf="@+id/labels"
+        app:layout_constraintTop_toTopOf="@+id/labelsCollapsedGroupView"
         android:src="@drawable/ic_label"
         app:tint="@color/icon_weak" />
 
-    <!-- TODO: Should be changed and replaced with MAILAND-1502 -->
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/labels"
+    <ch.protonmail.android.ui.view.SingleLineLabelChipGroupView
+        android:id="@+id/labelsCollapsedGroupView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/message_details_header_margin_normal"
@@ -242,7 +242,7 @@
         android:layout_marginTop="@dimen/message_details_header_margin_big"
         app:layout_constraintLeft_toRightOf="@id/senderInitialBarrier"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/labels"
+        app:layout_constraintTop_toBottomOf="@+id/labelsCollapsedGroupView"
         style="@style/Proton.Text.DefaultSmall.Weak"
         tools:text="2021-01-28 at 10:04 AM" />
 
